--- a/App1/projets/testK/config.json
+++ b/App1/projets/testK/config.json
@@ -3,7 +3,20 @@
     "magasin": "Karouf",
     "auteur": "KD",
     "date_creation": "12/06/2025",
-    "chemin_plan": "projets\\testK\\plan.jpg",
+    "chemin_plan": "App1/projets/testK/plan.jpg",
     "taille_quadrillage": 100,
-    "produits": []
+    "produits": {
+        "V18": [
+            "Agneau",
+            "Aiguillette de boeuf",
+            "Aiguillette de poulet",
+            "Andouille"
+        ],
+        "U17": [
+            "Bigorneaux",
+            "Cabillaud",
+            "Colin",
+            "Coques"
+        ]
+    }
 }
