reinsertion menu et toolbar

--- a/App1/projets/maga/config.json
+++ b/App1/projets/maga/config.json
@@ -3,5 +3,16 @@
     "magasin": "jaoaa",
     "auteur": "laha",
     "chemin_plan": "App1/projets/maga/plan.jpg",
-    "produits": {}
+    "produits": {
+        "V19": [
+            "Crêpes",
+            "Miel",
+            "Pain d'épice"
+        ],
+        "W2": [
+            "Biscuits salés",
+            "Bretzel",
+            "Mini-feuilletés"
+        ]
+    }
 }
