Gestion des cases inaccessibles pour mise en rayon 'En cours'

--- a/App1/projets/fre/config.json
+++ b/App1/projets/fre/config.json
@@ -7,6 +7,10 @@
         "D6": [
             "Betterave",
             "Brocolis"
+        ],
+        "V13": [
+            "Crudités",
+            "Foie gras"
         ]
     }
 }
