Gestion des cases inaccessibles pour mise en rayon y compris les caisses 'terminé'

--- a/App1/projets/fre/config.json
+++ b/App1/projets/fre/config.json
@@ -11,6 +11,10 @@
         "V13": [
             "Crudités",
             "Foie gras"
+        ],
+        "Z20": [
+            "Smartphone",
+            "Ordinateur portable"
         ]
     }
 }
