--- a/App1/projets/maga/config.json
+++ b/App1/projets/maga/config.json
@@ -13,6 +13,11 @@
             "Biscuits salés",
             "Bretzel",
             "Mini-feuilletés"
+        ],
+        "A16": [
+            "Alcools fort",
+            "Bière",
+            "Vin"
         ]
     }
 }
