Ajout: affichage du nombre de produits par magasin

--- a/App1/projets/testK/config.json
+++ b/App1/projets/testK/config.json
@@ -17,6 +17,13 @@
             "Cabillaud",
             "Colin",
             "Coques"
+        ],
+        "E4": [
+            "Andouillette",
+            "Bacon",
+            "Bavette (boeuf)",
+            "Bifteck de boeuf",
+            "Boeuf (entrecôte)"
         ]
     }
 }
