--- a/App1/projets/cacacaca_2/config.json
+++ b/App1/projets/cacacaca_2/config.json
@@ -5,11 +5,11 @@
     "chemin_plan": "App1/projets/cacacaca_2/plan.jpg",
     "produits": {
         "A3": [
-            "Bigorneaux",
-            "Cabillaud",
-            "Colin",
-            "Coques",
-            "Coquille St-Jacques"
+            "Crevettes",
+            "Écrevisses",
+            "Encornet",
+            "Gambas",
+            "Hareng fumé"
         ],
         "Z8": [
             "Beurre",
@@ -31,6 +31,13 @@
             "Beurre de cacahuète",
             "Cassonade",
             "Citron confits"
+        ],
+        "C1": [
+            "Bigorneaux",
+            "Cabillaud",
+            "Colin",
+            "Coques",
+            "Coquille St-Jacques"
         ]
     }
 }
