Ajout de l'icone d'affichage de liste de produits

--- a/App1/projets/Magasin_de_Calais/config.json
+++ b/App1/projets/Magasin_de_Calais/config.json
@@ -15,6 +15,16 @@
             "Boulgour",
             "Anchois",
             "Bolognaise"
+        ],
+        "C5": [
+            "Foie gras",
+            "Galettes",
+            "Pâtes à tarte"
+        ],
+        "G8": [
+            "Andouille",
+            "Bifteck de boeuf",
+            "Burgers"
         ]
     }
 }
