algo retrouvé de App2

--- a/App1/projets/Magasin_de_Calais/config.json
+++ b/App1/projets/Magasin_de_Calais/config.json
@@ -15,6 +15,25 @@
             "Boulgour",
             "Anchois",
             "Bolognaise"
+        ],
+        "J5": [
+            "Aubergine",
+            "Avocat",
+            "Betterave"
+        ],
+        "I6": [
+            "Ail",
+            "Artichaut",
+            "Asperges",
+            "Brocolis",
+            "Carotte"
+        ],
+        "K7": [
+            "Blette",
+            "Céleri",
+            "Champignons",
+            "Champignons chinois",
+            "Chou"
         ]
     }
 }
